sort.pancake.lessons.sort.pancake.CohenPancake.scala.error
CohenPancake:3: error: reassignment to val
debug = isSelected()
      ^